syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Messages/FlowSwitch.proto";

message GetFlowSwitchesRequest {
	int32 SalesArrangementId = 1;
}

message GetFlowSwitchesResponse {
	repeated FlowSwitch FlowSwitches = 1;
}