syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";

message GetProductSalesArrangementRequest {
	int64 CaseId = 1;
}

message GetProductSalesArrangementResponse {
	int32 SalesArrangementId = 1;
	google.protobuf.Int32Value OfferId = 2;
}