syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message GetSalesArrangementRequest {
	int32 SalesArrangementId = 1;
}