syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "NullableGrpcDate.proto";

message UpdateLoanAssessmentParametersRequest {
	int32 SalesArrangementId = 1;
	
	int32 LoanApplicationAssessmentId = 2;

	string RiskSegment = 3;

	string CommandId = 4;

	cis.types.NullableGrpcDate RiskBusinessCaseExpirationDate = 5;
}
